--- a/index.html
+++ b/index.html
@@ -60,11 +60,11 @@
 
                     </div>
                     <div class="gallery-cell">
-                      <img src="pictures/2.webp" alt="Save Nagarahole">
+                      <img src="pictures/2.webp" loading="lazy alt="Save Nagarahole">
 
                     </div>
                     <div class="gallery-cell">
-                      <img src="pictures/3.webp" alt="Save Nagarahole">
+                      <img src="pictures/3.webp" loading="lazy alt="Save Nagarahole">
 
                     </div>
 <!--                    <div class="gallery-cell">
