--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
               <div class="card-content">
                 
                 
-                <p>Cariappa is a resident of H.D Kote, Karnataka who was harassed, tortured and killed by the Forest Department on 13 October 2022.</p>
+                <p>Cariappa, a resident of H.D Kote, Karnataka, was harassed, tortured and killed by the Forest Department on 13 October 2022.</p>
                 <br>
                 <p>He was a member of the Jenu Kuruba (honey gatherer) tribe who have been forcefully evicted from their forests as part of colonial conservation policies, and routinely face harassment from the Forest Department and they demand for their Forest rights, for their right to go home.</p>
                 <br>
