--- a/index.html
+++ b/index.html
@@ -149,21 +149,21 @@
             <div class="org-img-div column">
               <img class="org-img" src="https://pbs.twimg.com/profile_images/1174953767256514560/Jyih6H2I_400x400.jpg" alt="fffi" loading="lazy" />
               <a class="img-link" target="_blank" href="https://www.instagram.com/fridaysforfuture.karnataka/">
-                @fridaysforfuture.karnataka
+                FFF Karnataka
               </a>
             </div>
 
             <div class="org-img-div column">
               <img class="org-img" src="pictures/bk.jpg" alt="fffi" loading="lazy" />
               <a class="img-link" target="_blank" href="https://www.instagram.com/bahutvakarnataka/">
-                @bahutvakarnataka
+                Bahutva Karnataka
               </a>
             </div>
 
             <div class="org-img-div column">
               <img class="org-img" src="pictures/ccag.jpg" alt="chennai climate action group" loading="lazy" />
               <a class="img-link" target="_blank" href="https://www.instagram.com/ccagofficial/">
-                @ccagofficial
+                CCAG
               </a>
             </div>
 
@@ -177,14 +177,14 @@
             <div class="org-img-div column">
               <img class="org-img" src="pictures/lib.png" alt="let india breathe" loading="lazy" />
               <a class="img-link" target="_blank" href="https://www.instagram.com/letindbreathe/">
-                @letindbreathe
+                LIB
               </a>
             </div>
 
             <div class="org-img-div column">
               <img class="org-img" src="pictures/fffi.jpg" alt="fffi" loading="lazy" />
               <a class="img-link" target="_blank" href="https://www.instagram.com/fridaysforfuture.india/">
-                @FFFIndia
+                FFF India
               </a>
             </div>
             
