--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
             
             
             <div class="org-img-div column">
-              <img class="org-img" src="https://pbs.twimg.com/profile_images/1174953767256514560/Jyih6H2I_400x400.jpg" alt="fffi" loading="lazy" />
+              <img class="org-img" src="pictures/fffk.jpg" alt="fffi" loading="lazy" />
               <a class="img-link" target="_blank" href="https://www.instagram.com/fridaysforfuture.karnataka/">
                 FFF Karnataka
               </a>
