--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
                 <br>
                 <p>He was a member of the Jenu Kuruba (honey gatherer) tribe who have been forcefully evicted from their forests as part of colonial conservation policies, and routinely face harassment from the Forest Department and they demand for their Forest rights, for their right to go home.</p>
                 <br>
-                <p>We demand #JusticeforCariappa and justice for the Jenu Kurubas. Join us in demanding justice from the people in power!</p>                <br>
+                <p>We demand #JusticeForCariappa and justice for the Jenu Kurubas. Join us in demanding justice from the people in power!</p>                <br>
                 <p>
                   <label id="emailInput"></label> people have sent the email so far, <a style="color:red" href="mail.html">send yours now!</a>  
                 </p>
@@ -241,7 +241,7 @@
           console.log(elems);
           var instances = M.Carousel.init(elems, options);
         })
-        document.getElementById('tweet-quote').setAttribute('href','https://twitter.com/intent/tweet/?text='+ "%E2%9A%A0%EF%B8%8FCariappa%2C%20a%20member%20of%20the%20Jenu%20Kuruba%20tribe%2C%20was%20harassed%2C%20tortured%20%26%20killed%20by%20the%20Forest%20Dept.%20on%2013%20Oct%2022%0A%0A%F0%9F%90%85The%20%23JenuKuruba%20have%20been%20harassed%20%26%20forcefully%20evicted%20from%20their%20forests%20as%20part%20of%20colonial%20%27conservation%27%0A%0A%E2%9C%8ADemand%20%23JusticeforCariappa%F0%9F%91%87%0Abit.ly%2FJusticeforCariappa");
+        document.getElementById('tweet-quote').setAttribute('href','https://twitter.com/intent/tweet/?text='+ "%E2%9A%A0%EF%B8%8FCariappa%2C%20a%20member%20of%20the%20Jenu%20Kuruba%20tribe%2C%20was%20harassed%2C%20tortured%20%26%20killed%20by%20the%20Forest%20Dept.%20on%2013%20Oct%2022%0A%0A%F0%9F%90%85The%20%23JenuKuruba%20have%20been%20harassed%20%26%20forcefully%20evicted%20from%20their%20forests%20as%20part%20of%20colonial%20%27conservation%27%0A%0A%E2%9C%8ADemand%20%23JusticeForCariappa%F0%9F%91%87%0Abit.ly%2FJusticeforCariappa");
       </script>
   </body>
 
