--- a/index.html
+++ b/index.html
@@ -7,8 +7,7 @@
     <meta property="og:title" content="Save Nagarahole" />
     <meta property="og:description" content="A citizen's movement to Save Biodiversity in Nagarahole" />
     <meta name="description" content="A citizen's movement to Save Biodiversity in Nagarahole">
-    <meta property="og:image"
-      content=" " />
+    <meta property="og:image" content="http://savenagarhole.thereisnoearthb.com/pictures/Social%20Preview%20of%20Links.jpg" />
 
     <meta property="og:image:type" content="image/png" />
     <meta name="twitter:card" content="summary_large_image" />
