--- a/index.html
+++ b/index.html
@@ -7,12 +7,12 @@
     <meta property="og:title" content="Save Nagarahole" />
     <meta property="og:description" content="A citizen's movement to Save Biodiversity in Nagarahole" />
     <meta name="description" content="A citizen's movement to Save Biodiversity in Nagarahole">
-    <meta property="og:image" content="http://savenagarhole.thereisnoearthb.com/pictures/Social%20Preview%20of%20Links.jpg" />
+    <meta property="og:image" content="http://savenagarahole.thereisnoearthb.com/pictures/Social%20Preview%20of%20Links.jpg" />
 
     <meta property="og:image:type" content="image/png" />
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="title" content="Save Nagarahole: Movement to save the biodiversity Nagarahole tiger reserve">
-    <title>Save Nagarahole: Movement to save Nagarhole Forest from the Forest Department :')</title>
+    <title>Save Nagarahole: Movement to save Nagarahole Forest from the Forest Department :')</title>
     <meta property="keywords"
       content="Environment, Nagarahole, Nagarahole Forest, Save Nagarahole campaign, Tiger, Jenu Kuruba, Protected ">
 
