--- a/iphonemail.html
+++ b/iphonemail.html
@@ -42,7 +42,7 @@
         </button>
       </p>
       <main id="content">
-        <p>TO:<a href="mailto:cm@karnataka.gov.in">cm@karnataka.gov.in</a>, <a href="mailto:anandsingh.b.s.@gmail.com">anandsingh.b.s.@gmail.com</a> , <a href="mailto:minmfpkar@gmail.com">minmfpkar@gmail.com</a></p>
+        <p>TO:<a href="mailto:cm@karnataka.gov.in">cm@karnataka.gov.in</a>, <a href="mailto:prs-fee@karnataka.gov.in">prs-fee@karnataka.gov.in</a> , <a href="mailto:minmfpkar@gmail.com">minmfpkar@gmail.com</a></p>
 <p>CC: <a href="mailto:pccfkar@gmail.com">pccfkar@gmail.com</a>, <a href="mailto:prs-fee@karnataka.gov.in">prs-fee@karnataka.gov.in</a> , <a href="mailto:mefcc@gov.in">mefcc@gov.in</a>, <a href="mailto:suneesh.buxy@gov.in">suneesh.buxy@gov.in</a></p>
 <p><br /><br /></p>
 <p><strong>Subject </strong>: To ensure justice for Cariappa from the Jenu Kuruba tribe<br /><br /><br /></p>
@@ -65,7 +65,7 @@
 
     <script>
       const mail = () => {
-        const to = "cm@karnataka.gov.in, anandsingh.b.s.@gmail.com, minmfpkar@gmail.com";
+        const to = "cm@karnataka.gov.in, prs-fee@karnataka.gov.in, minmfpkar@gmail.com";
         const cc = "pccfkar@gmail.com, prs-fee@karnataka.gov.in, mefcc@gov.in, suneesh.buxy@gov.in";
         const bcc = "solidarity@thereisnoearthb.com";
 
