--- a/index.html
+++ b/index.html
@@ -144,6 +144,12 @@
 
           <div class="org-logo row">
             
+            <div class="org-img-div column">
+              <img class="org-img" src="pictures/tap.jpeg" alt="The Adivasi post" loading="lazy" />
+              <a class="img-link" target="_blank" href="https://www.instagram.com/theadivasipost/">
+                The Adivasi Post
+              </a>
+            </div>
             
             <div class="org-img-div column">
               <img class="org-img" src="pictures/fffk.jpg" alt="fffi" loading="lazy" />
