--- a/index.html
+++ b/index.html
@@ -166,6 +166,13 @@
             </div>
 
             <div class="org-img-div column">
+              <img class="org-img" src="pictures/cfi.png" alt="Climate Front India" loading="lazy" />
+              <a class="img-link" target="_blank" href="https://www.instagram.com/climatefrontindia/">
+                Climate Front India
+              </a>
+            </div>
+
+            <div class="org-img-div column">
               <img class="org-img" src="pictures/ccag.jpg" alt="chennai climate action group" loading="lazy" />
               <a class="img-link" target="_blank" href="https://www.instagram.com/ccagofficial/">
                 CCAG
@@ -186,13 +193,13 @@
               </a>
             </div>
 
-            <div class="org-img-div column">
+            <!--<div class="org-img-div column">
               <img class="org-img" src="pictures/fffi.jpg" alt="fffi" loading="lazy" />
               <a class="img-link" target="_blank" href="https://www.instagram.com/fridaysforfuture.india/">
                 FFF India
               </a>
             </div>
-            
+          --> 
             <div class="org-img-div column">
               <img class="org-img" src="pictures/mollem.jpg" alt="Save Mollem" loading="lazy" />
               <a class="img-link" target="_blank" href="https://www.instagram.com/mymollem.goa/">
