--- a/index.html
+++ b/index.html
@@ -59,26 +59,26 @@
 
                     </div>
                     <div class="gallery-cell">
-                      <img src="pictures/2.jpg" loading="lazy alt="Save Nagarahole">
+                      <img src="pictures/2.jpg" loading="lazy"alt="Save Nagarahole">
 
                     </div>
                     <div class="gallery-cell">
-                      <img src="pictures/3.jpg" loading="lazy alt="Save Nagarahole">
-
-                    </div>
-
-                    <div class="gallery-cell">
-                      <img src="pictures/4.jpg" loading="lazy alt="Save Nagarahole">
+                      <img src="pictures/3.jpg" loading="lazy" alt="Save Nagarahole">
 
                     </div>
 
                     <div class="gallery-cell">
-                      <img src="pictures/5.jpg" loading="lazy alt="Save Nagarahole">
+                      <img src="pictures/4.jpg" loading="lazy"alt="Save Nagarahole">
 
                     </div>
 
                     <div class="gallery-cell">
-                      <img src="pictures/6.jpg" loading="lazy alt="Save Nagarahole">
+                      <img src="pictures/5.jpg" loading="lazy"alt="Save Nagarahole">
+
+                    </div>
+
+                    <div class="gallery-cell">
+                      <img src="pictures/6.jpg" loading="lazy"alt="Save Nagarahole">
 
                     </div>
 <!--                    <div class="gallery-cell">
